--- a/modal-collection.html
+++ b/modal-collection.html
@@ -99,6 +99,31 @@
           <span class="button-text">Open modal forget password finished</span>
         </span>
       </a>
+      <a id="button-modal-barcode-confirm" class="button is-fluid" href="#">
+        <span class="button-body">
+          <span class="button-text">Open modal barcode confirm</span>
+        </span>
+      </a>
+      <a id="button-modal-barcode-input" class="button is-fluid" href="#">
+        <span class="button-body">
+          <span class="button-text">Open modal barcode input</span>
+        </span>
+      </a>
+      <a id="button-modal-barcode-finished" class="button is-fluid" href="#">
+        <span class="button-body">
+          <span class="button-text">Open modal barcode finished</span>
+        </span>
+      </a>
+      <a id="button-modal-reward-confirm" class="button is-fluid" href="#">
+        <span class="button-body">
+          <span class="button-text">Open modal reward confirm</span>
+        </span>
+      </a>
+      <a id="button-modal-reward-finished" class="button is-fluid" href="#">
+        <span class="button-body">
+          <span class="button-text">Open modal reward finished</span>
+        </span>
+      </a>
     </div>
   </div>
 
@@ -112,7 +137,7 @@
         <span class="text-first-md-bold is-orange-1">สมัครสมาชิกใหม่เสร็จสมบูรณ์</span>
       </div>
       <div class="modal-footer">
-        <a class="button button-modal-close is-size-sm is-fluid" href="#">
+        <a class="button button-modal-close is-sm is-fluid" href="#">
           <span class="button-body">
             <span class="button-text">กลับหน้าหลัก</span>
           </span>
@@ -140,7 +165,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <a class="button button-modal-close is-size-sm is-fluid" href="#">
+        <a class="button button-modal-close is-sm is-fluid" href="#">
           <span class="button-body">
             <span class="button-text">กลับหน้าหลัก</span>
           </span>
@@ -160,13 +185,167 @@
           <span class="text-first-md-bold is-orange-1">ระบบจะทำการส่งรหัสใช้งานไปยัง <br> อีเมล์ที่แจ้งภายใน 5 นาที</span>
         </div>
         <div class="modal-footer">
-          <a class="button button-modal-close is-size-sm is-fluid" href="#">
+          <a class="button button-modal-close is-sm is-fluid" href="#">
             <span class="button-body">
               <span class="button-text">กลับหน้าหลัก</span>
             </span>
           </a>
         </div>
       </div>
+    <div class="modal-overlay"></div>
+  </div>
+
+  <!-- Barcode confirm -->
+  <div id="modal-barcode-confirm" class="modal">
+    <div class="modal-container">
+        <div class="modal-header">
+          <span class="text-first-md-bold is-white">สแกนสินค้า</span>
+        </div>
+        <div class="modal-body is-content-center">
+          <div class="modal-segment">
+            <span class="text-first-lg-bold is-orange-1">รหัสบาร์โค้ดไม่ถูกต้อง</span>
+            <!-- <span class="text-first-lg-bold is-orange-1">รหัสนี้ถูกใช้งานไปแล้ว</span> -->
+          </div>
+          <div class="modal-segment">
+            <span class="text-first-md-bold is-orange-1">คุณต้องการกรอกรหัสเองหรือไม่?</span>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="modal-button-confirm">
+            <a class="button button-modal-close is-sm is-flexible" href="#">
+              <span class="button-body">
+                <span class="button-text">ยกเลิก</span>
+              </span>
+            </a>
+            <a class="button button-modal-close is-sm is-flexible" href="#">
+              <span class="button-body">
+                <span class="button-text">ตกลง</span>
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    <div class="modal-overlay"></div>
+  </div>
+
+  <!-- Barcode input -->
+  <div id="modal-barcode-input" class="modal">
+    <div class="modal-container">
+        <div class="modal-header">
+          <span class="text-first-md-bold is-white">สแกนสินค้า</span>
+        </div>
+        <div class="modal-body is-content-center">
+          <div class="modal-segment">
+            <span class="text-first-lg-bold is-orange-1">กรุณากรอกบาร์โค้ด 10 หลักหลัง</span>
+          </div>
+          <div class="modal-segment is-fluid">
+            <div class="field is-sm is-border">
+              <input class="field-input" type="text" placeholder="">
+              <p class="field-message">error_text</p>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="modal-button-confirm">
+            <a class="button button-modal-close is-sm is-flexible" href="#">
+              <span class="button-body">
+                <span class="button-text">ยกเลิก</span>
+              </span>
+            </a>
+            <a class="button button-modal-close is-sm is-flexible" href="#">
+              <span class="button-body">
+                <span class="button-text">ตกลง</span>
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    <div class="modal-overlay"></div>
+  </div>
+
+  <!-- Barcode finished -->
+  <div id="modal-barcode-finished" class="modal">
+    <div class="modal-container">
+        <div class="modal-header">
+          <span class="text-first-md-bold is-white">สแกนสินค้า</span>
+        </div>
+        <div class="modal-body is-content-center">
+          <div class="modal-segment">
+            <span class="text-first-lg-bold is-orange-1">บันทึกคะแนนเรียบร้อย</span>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <a class="button button-modal-close is-sm is-fluid" href="#">
+            <span class="button-body">
+              <span class="button-text">ตกลง</span>
+            </span>
+          </a>
+        </div>
+      </div>
+    <div class="modal-overlay"></div>
+  </div>
+
+  <!-- Reward confirm -->
+  <div id="modal-reward-confirm" class="modal">
+    <div class="modal-container">
+      <div class="modal-header">
+        <span class="text-first-md-bold is-white">แลกของรางวัล</span>
+      </div>
+      <div class="modal-body is-content-center is-content-more">
+        <div class="modal-segment">
+          <span class="text-first-lg-bold is-orange-1">คุณต้องการแลกของรางวัลชิ้นนี้</span>
+        </div>
+        <div class="modal-segment">
+          <span class="text-first-sm-bold is-orange-1">(รางวัล : VGA Card Gigabyte รุ่น  GBT GTX1070 AORUS 8 G D5 256Bit มูลค่า 10000 บาท คะแนนที่ใช้ 7000 คะแนน)</span>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="modal-button-confirm">
+          <a class="button button-modal-close is-sm is-flexible" href="#">
+            <span class="button-body">
+              <span class="button-text">ยกเลิก</span>
+            </span>
+          </a>
+          <a class="button button-modal-close is-sm is-flexible" href="#">
+            <span class="button-body">
+              <span class="button-text">ตกลง</span>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="modal-overlay"></div>
+  </div>
+
+  <!-- Reward finished -->
+  <div id="modal-reward-finished" class="modal">
+    <div class="modal-container">
+      <div class="modal-header">
+        <span class="text-first-md-bold is-white">แลกของรางวัล</span>
+      </div>
+      <div class="modal-body is-content-center">
+         <div class="modal-segment">
+          <span class="text-first-lg-bold is-orange-1">การแลกของรางวัลเสร็จสมบูรณ์</span>
+        </div>
+        <div class="modal-segment">
+          <span class="text-first-sm-bold is-orange-1">ของรางวัลจะจัดส่งถึงท่านภายใน 15 วันทำการ</span>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="modal-button-confirm">
+          <a class="button button-modal-close is-sm is-flexible" href="#">
+            <span class="button-body">
+              <span class="button-text">กลับ</span>
+            </span>
+          </a>
+          <a class="button button-modal-close is-sm is-flexible" href="#">
+            <span class="button-body">
+              <span class="button-text">กลับหน้าหลัก</span>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
     <div class="modal-overlay"></div>
   </div>
 
@@ -191,6 +370,31 @@
       // Open modal forget password finished
       $('#button-modal-forget-password-finished').on("click", function() {
           $('#modal-forget-password-finished').addClass('is-open');
+      });
+
+      // Open modal barcode confirm
+      $('#button-modal-barcode-confirm').on("click", function() {
+          $('#modal-barcode-confirm').addClass('is-open');
+      });
+
+      // Open modal barcode input
+      $('#button-modal-barcode-input').on("click", function() {
+          $('#modal-barcode-input').addClass('is-open');
+      });
+
+      // Open modal barcode finished
+      $('#button-modal-barcode-finished').on("click", function() {
+          $('#modal-barcode-finished').addClass('is-open');
+      });
+
+      // Open modal reward confirm
+      $('#button-modal-reward-confirm').on("click", function() {
+          $('#modal-reward-confirm').addClass('is-open');
+      });
+
+      // Open modal reward finished
+      $('#button-modal-reward-finished').on("click", function() {
+          $('#modal-reward-finished').addClass('is-open');
       });
     });
   </script>
