--- a/profile-1.html
+++ b/profile-1.html
@@ -84,107 +84,144 @@
 <body>
   <!-- Topbar -->
   <div class="topbar">
-    <div class="topbar-info">
-      <span class="text-first-lg-bold is-orange-1 is-ellipsis" title="ศิริชัย  ลาภมหานนท์">ศิริชัย  ลาภมหานนท์</span>
-      <span class="text-first-sm-bold is-gray-4 is-ellipsis" title="ร้าน Young IT">ร้าน Young IT</span>
+    <div class="topbar-back">
+      <a class="button-back" href="#">
+        <img src="./assets/images/icons/icon-back.png" alt="Icon">
+      </a>
+      <span class="text-first-bg-bold is-orange-1">โปรไฟล์</span>
     </div>
-    <div class="topbar-point">
-      <span class="text-first-hg-bold is-white for-point-number">9999</span>
-      <span class="text-first-md-bold is-white for-point-unit">คะแนน</span>
-    </div>
+    <a class="topbar-point is-logo" href="#">
+      <img src="./assets/images/icons/icon-edit.png" alt="Icon">
+    </a>
   </div>
 
   <div class="container-content">
-    <!-- Product -->
-    <div class="card-news">
-      <div class="postbar">
-        <div class="postbar-info">
-          <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
-          </div>
-          <div class="postbar-segment is-meta">
-            <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
-            <div class="datetime">โพสต์ 1 พศจิกายน 2561 เวลา 15.00 น.</div>
-          </div>
+    <div class="container-content-inner">
+      <div class="profile">
+        <div class="profile-title">
+          <span class="text-first-lg-bold is-gray-6">ข้อมูลส่วนตัว</span>
         </div>
-        <div class="postbar-action">
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank">
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-download.svg" alt="Icon">
-                <span class="button-text">Download</span>
-              </span>
-            </a>
-          </div>
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank"><!-- add class 'is-active' to display keeped status -->
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-keep.svg" alt="Icon">
-                <span class="button-text">Keep</span>
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="card-image">
-        <img src="./assets/images/contents/cover-news-1.png" alt="News cover">
-      </div>
-      <div class="card-button is-purchase">
-        <a class="button is-xs is-orange-transparent is-border-radius-lg" href="#">
-          <span class="button-body">
-            <span class="button-text">สนใจสั่งซื้อสินค้า</span>
-          </span>
-        </a>
-      </div>
-    </div>
-
-    <!-- Video -->
-    <div class="card-news">
-      <div class="postbar">
-        <div class="postbar-info">
-          <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
-          </div>
-          <div class="postbar-segment is-meta">
-            <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
-            <div class="datetime">โพสต์ 1 พศจิกายน 2561 เวลา 15.00 น.</div>
-          </div>
-        </div>
-        <div class="postbar-action">
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank">
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-download.svg" alt="Icon">
-                <span class="button-text">Download</span>
-              </span>
-            </a>
-          </div>
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank"><!-- add class 'is-active' to display keeped status -->
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-keep.svg" alt="Icon">
-                <span class="button-text">Keep</span>
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="card-image">
-        <img src="./assets/images/contents/cover-news-2.jpg" alt="News cover">
-        <div class="card-button is-video">
-          <a class="button is-flexible is-transparent" href="#">
-            <span class="button-body">
-              <img class="button-icon" src="./assets/images/icons/icon-play-video.svg" alt="Icon">
-            </span>
-          </a>
-        </div>
+        <ul class="list-profile">
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">ชื่อ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">ศิริชัย</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">นามสกุล :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">ลาภมหานนท์</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">วันเกิด :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">16/9/2503</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">บ้านเลขที่ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">99/172</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">หมู่ที่ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">2</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">ถนน :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">รามอินทรา 65</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">แขวง/ตำบล :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">ท่าแร้ง</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">เขต/อำเภอ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">บางเขน</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">จังหวัด :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">กรุงเทพมหานคร</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">รหัสไปรษณีย์ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">10230</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">เบอร์โทรศัพท์ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">0880883714</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">เบอร์มือถือ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">0877000700</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">อีเมล์ :</span>
+            </div>
+            <div class="list-value">
+              <span class="text">remembersirichai@gmail.com</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text">Line ID:</span>
+            </div>
+            <div class="list-value">
+              <span class="text">sirichai-yong</span>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
 
   <!-- Navigation bar -->
   <div class="navigationbar">
-      <a class="navigation-button is-active" href="#"><!-- add class 'is-active' to display selected status -->
+      <a class="navigation-button" href="#"><!-- add class 'is-active' to display selected status -->
         <img class="navigation-icon" src="./assets/images/icons/icon-news.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">ข่าวสาร</span>
       </a>
@@ -196,7 +233,7 @@
         <img class="navigation-icon" src="./assets/images/icons/icon-reward.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">แลกรางวัล</span>
       </a>
-      <a class="navigation-button" href="#">
+      <a class="navigation-button is-active" href="#">
         <img class="navigation-icon" src="./assets/images/icons/icon-profile.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">โปรไฟล์</span>
       </a>
