--- a/reward-3.html
+++ b/reward-3.html
@@ -84,9 +84,11 @@
 <body>
   <!-- Topbar -->
   <div class="topbar">
-    <div class="topbar-info">
-      <span class="text-first-lg-bold is-orange-1 is-ellipsis" title="ศิริชัย  ลาภมหานนท์">ศิริชัย  ลาภมหานนท์</span>
-      <span class="text-first-sm-bold is-gray-4 is-ellipsis" title="ร้าน Young IT">ร้าน Young IT</span>
+    <div class="topbar-back">
+      <a class="button-back" href="#">
+        <img src="./assets/images/icons/icon-back.png" alt="Icon">
+      </a>
+      <span class="text-first-bg-bold is-orange-1 is-nowrap">แลกของรางวัล</span>
     </div>
     <div class="topbar-point">
       <span class="text-first-hg-bold is-white for-point-number">9999</span>
@@ -95,96 +97,67 @@
   </div>
 
   <div class="container-content">
-    <!-- Product -->
-    <div class="card-news">
-      <div class="postbar">
-        <div class="postbar-info">
-          <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
-          </div>
-          <div class="postbar-segment is-meta">
-            <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
-            <div class="datetime">โพสต์ 1 พศจิกายน 2561 เวลา 15.00 น.</div>
-          </div>
+    <div class="postbar is-light-theme is-no-bottom-line">
+      <div class="postbar-info">
+        <div class="postbar-segment is-logo">
+          <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
         </div>
-        <div class="postbar-action">
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank">
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-download.svg" alt="Icon">
-                <span class="button-text">Download</span>
-              </span>
-            </a>
-          </div>
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank"><!-- add class 'is-active' to display keeped status -->
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-keep.svg" alt="Icon">
-                <span class="button-text">Keep</span>
-              </span>
-            </a>
-          </div>
+        <div class="postbar-segment is-meta">
+          <span class="username" title="ศิริชัย  ลาภมหานนท์">ศิริชัย ลาภมหานนท์</span>
+          <span class="shopname" title="ร้าน Young IT">ร้าน Young IT</span>
         </div>
       </div>
-      <div class="card-image">
-        <img src="./assets/images/contents/cover-news-1.png" alt="News cover">
+    </div>
+    <div class="reward-detail">
+      <div class="product-image">
+        <img src="./assets/images/contents/product-1.jpg" alt="Product">
       </div>
-      <div class="card-button is-purchase">
-        <a class="button is-xs is-orange-transparent is-border-radius-lg" href="#">
-          <span class="button-body">
-            <span class="button-text">สนใจสั่งซื้อสินค้า</span>
+      <div class="product-point">
+        <div class="label">
+          <span class="text-first-bg-bold is-orange-1">คะแนนที่ใช้แลก</span>
+        </div>
+        <div class="point">
+          <span class="number">99999</span>
+          <span class="unit">คะแนน</span>
+        </div>
+      </div>
+      <a class="button is-fluid is-disable" href="#"><!-- Remove class 'is-disable' for active button -->
+        <span class="button-body">
+          <span class="button-text is-bg">แลกของรางวัล</span>
+        </span>
+      </a>
+    </div>
+    <div class="container-content-inner is-side-padding-sm">
+      <div class="product-info">
+        <div class="title">
+          <span class="text-first-lg-bold is-gray-6">
+            ระยะเวลา
           </span>
-        </a>
+        </div>
+        <div class="description">
+          <span class="text-first-sm-bold is-gray-4">
+            ตั้งแต่วันที่ 1 กุมภาพันธ์ 2561 ถึง 31 ธันวาคม 2561
+          </span>
+        </div>
+        <div class="title">
+          <span class="text-first-lg-bold is-gray-6">
+            รายละเอียด
+          </span>
+        </div>
+        <div class="description">
+          <span class="text-first-sm-bold is-gray-4">
+            เป็นรุ่นแรกของ iPhone ที่แยก หน่วยประมวลผล GPU ออก มาเพื่อเพิ่มประสิทธิภาพในการแสดงผล ทำให้ภาพดูเหมือน
+          </span>
+        </div>
       </div>
     </div>
 
-    <!-- Video -->
-    <div class="card-news">
-      <div class="postbar">
-        <div class="postbar-info">
-          <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
-          </div>
-          <div class="postbar-segment is-meta">
-            <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
-            <div class="datetime">โพสต์ 1 พศจิกายน 2561 เวลา 15.00 น.</div>
-          </div>
-        </div>
-        <div class="postbar-action">
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank">
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-download.svg" alt="Icon">
-                <span class="button-text">Download</span>
-              </span>
-            </a>
-          </div>
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank"><!-- add class 'is-active' to display keeped status -->
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-keep.svg" alt="Icon">
-                <span class="button-text">Keep</span>
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="card-image">
-        <img src="./assets/images/contents/cover-news-2.jpg" alt="News cover">
-        <div class="card-button is-video">
-          <a class="button is-flexible is-transparent" href="#">
-            <span class="button-body">
-              <img class="button-icon" src="./assets/images/icons/icon-play-video.svg" alt="Icon">
-            </span>
-          </a>
-        </div>
-      </div>
-    </div>
+
   </div>
 
   <!-- Navigation bar -->
   <div class="navigationbar">
-      <a class="navigation-button is-active" href="#"><!-- add class 'is-active' to display selected status -->
+      <a class="navigation-button" href="#"><!-- add class 'is-active' to display selected status -->
         <img class="navigation-icon" src="./assets/images/icons/icon-news.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">ข่าวสาร</span>
       </a>
@@ -192,7 +165,7 @@
         <img class="navigation-icon" src="./assets/images/icons/icon-scan.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">แสกนสินค้า</span>
       </a>
-      <a class="navigation-button" href="#">
+      <a class="navigation-button is-active" href="#">
         <img class="navigation-icon" src="./assets/images/icons/icon-reward.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">แลกรางวัล</span>
       </a>
