--- a/reward-5.html
+++ b/reward-5.html
@@ -23,8 +23,8 @@
   <meta name="rating" content="General">
   <!-- Disable automatic detection and formatting of possible phone numbers -->
   <meta name="format-detection" content="telephone=no">
-  <!-- Favicons: IE 10 -->
-  <link rel="icon" href="./../assets/images/favicons/favicon.ico" sizes="32x32" type="image/ico">
+  <!-- Favicons: IE 9, IE 10 -->
+  <link rel="icon" sizes="32x32" type="image/ico" href="./../assets/images/favicons/favicon.ico">
   <!-- Favicons: IE 11, Chrome, Firefox, Safari, Opera -->
   <link rel="icon" sizes="48x48" type="image/png" href="./../assets/images/favicons/favicon@xs.png">
   <link rel="icon" sizes="96x96" type="image/png" href="./../assets/images/favicons/favicon@sm.png">
@@ -42,6 +42,10 @@
   <meta name="msapplication-wide310x150logo" content="./../assets/images/favicons/ms-application-wide.png">
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="./../assets/css/main.min.css">
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
   <!-- Facebook: https://developers.facebook.com/docs/sharing/webmasters#markup -->
   <!--
@@ -76,59 +80,90 @@
   <meta itemprop="description" content="S-TREK GO_less_than_200_characters"/>
   <meta itemprop="image" content="https://example.com/GooglePlus_Cover_Timeline_Image.jpg"/>
   -->
-
-  <style>
-    .partition-line {
-      position: relative;
-      padding-top: 15px;
-      padding-bottom: 15px;
-      border-top: 0;
-    }
-
-    .partition-line:before {
-      content: ' ';
-      position: absolute;
-      z-index: 1;
-      width: 100%;
-      height: 1px;
-      background-color: #EEEEEE;
-    }
-  </style>
 </head>
 <body>
-  <button class="button is-sm" type="button" onclick="">
-    <span class="button-body">
-      <span class="button-text">Small size</span>
-    </span>
-  </button>
-  <button class="button" type="button" onclick="">
-    <span class="button-body">
-      <span class="button-text">Default size</span>
-    </span>
-  </button>
-  <button class="button is-lg" type="button" onclick="">
-    <span class="button-body">
-      <span class="button-text">Large size</span>
-    </span>
-  </button>
-  <hr class="partition-line">
-  <button class="button is-flexible" type="button" onclick="">
-    <span class="button-body">
-      <span class="button-text">Flexible</span>
-    </span>
-  </button>
-  <hr class="partition-line">
-  <button class="button is-fluid" type="button" onclick="">
-    <span class="button-body">
-      <span class="button-text">Fluid</span>
-    </span>
-  </button>
-  <hr class="partition-line">
-  <button class="button-primary" type="button" onclick="">
-    <span class="button-body">
-      <span class="button-text">Primary button</span>
-    </span>
-  </button>
+  <!-- Topbar -->
+  <div class="topbar">
+    <div class="topbar-back">
+      <a class="button-back" href="#">
+        <img src="./assets/images/icons/icon-back.png" alt="Icon">
+      </a>
+      <span class="text-first-bg-bold is-orange-1">รางวัล</span>
+    </div>
+    <div class="topbar-point">
+      <span class="text-first-hg-bold is-white for-point-number">9999</span>
+      <span class="text-first-md-bold is-white for-point-unit">คะแนน</span>
+    </div>
+  </div>
+
+  <div class="container-content is-except-footer-button">
+    <div class="postbar is-light-theme">
+      <div class="postbar-info">
+        <div class="postbar-segment is-logo">
+          <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
+        </div>
+        <div class="postbar-segment is-meta">
+          <span class="username" title="ศิริชัย  ลาภมหานนท์">ศิริชัย ลาภมหานนท์</span>
+          <span class="shopname" title="ร้าน Young IT">ร้าน Young IT</span>
+        </div>
+      </div>
+    </div>
+    <div class="table">
+      <div class="table-head">
+        <div class="table-row">
+          <div class="table-head-col is-history-date">
+            <span class="text">วันที่</span>
+          </div>
+          <div class="table-head-col is-reward">
+            <span class="text">รางวัลที่แลก</span>
+          </div>
+          <div class="table-head-col is-used-point">
+            <span class="text">คะแนนที่ใช้</span>
+          </div>
+        </div>
+      </div>
+      <div class="table-body">
+        <div class="table-row">
+          <div class="table-col is-history-date">
+            <span class="text">xx-xx-xx</span>
+          </div>
+          <div class="table-col is-reward">
+            <span class="text">xxxxxxxxxxxx</span>
+          </div>
+          <div class="table-col is-used-point">
+            <span class="text">xx</span>
+          </div>
+        </div>
+        <div class="table-row">
+          <div class="table-col is-history-date">
+            <span class="text">xx-xx-xx</span>
+          </div>
+          <div class="table-col is-reward">
+            <span class="text">xxxxxxxxxxxx</span>
+          </div>
+          <div class="table-col is-used-point">
+            <span class="text">xx</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Navigation bar -->
+  <div class="footer-button">
+    <div class="footer-button-inner">
+      <a class="button" href="#">
+        <span class="button-body">
+          <span class="button-text is-lg">ดาวน์โหลด PDF</span>
+        </span>
+      </a>
+      <a class="button" href="#">
+        <span class="button-body">
+          <span class="button-text is-lg">กลับ</span>
+        </span>
+      </a>
+    </div>
+  </div>
 
   <script type="text/javascript" src="./../assets/js/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="./../assets/js/jquery-migrate/jquery-migrate-3.0.1.min.js"></script>
