--- a/scan-2.html
+++ b/scan-2.html
@@ -84,9 +84,11 @@
 <body>
   <!-- Topbar -->
   <div class="topbar">
-    <div class="topbar-info">
-      <span class="text-first-lg-bold is-orange-1 is-ellipsis" title="ศิริชัย  ลาภมหานนท์">ศิริชัย  ลาภมหานนท์</span>
-      <span class="text-first-sm-bold is-gray-4 is-ellipsis" title="ร้าน Young IT">ร้าน Young IT</span>
+    <div class="topbar-back">
+      <a class="button-back" href="#">
+        <img src="./assets/images/icons/icon-back.png" alt="Icon">
+      </a>
+      <span class="text-first-bg-bold is-orange-1">แสกนสินค้า</span>
     </div>
     <div class="topbar-point">
       <span class="text-first-hg-bold is-white for-point-number">9999</span>
@@ -95,100 +97,95 @@
   </div>
 
   <div class="container-content">
-    <!-- Product -->
-    <div class="card-news">
-      <div class="postbar">
-        <div class="postbar-info">
-          <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
-          </div>
-          <div class="postbar-segment is-meta">
-            <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
-            <div class="datetime">โพสต์ 1 พศจิกายน 2561 เวลา 15.00 น.</div>
-          </div>
+    <div class="postbar is-light-theme">
+      <div class="postbar-info">
+        <div class="postbar-segment is-logo">
+          <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
         </div>
-        <div class="postbar-action">
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank">
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-download.svg" alt="Icon">
-                <span class="button-text">Download</span>
-              </span>
-            </a>
-          </div>
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank"><!-- add class 'is-active' to display keeped status -->
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-keep.svg" alt="Icon">
-                <span class="button-text">Keep</span>
-              </span>
-            </a>
-          </div>
+        <div class="postbar-segment is-meta">
+          <span class="username" title="ศิริชัย  ลาภมหานนท์">ศิริชัย ลาภมหานนท์</span>
+          <span class="shopname" title="ร้าน Young IT">ร้าน Young IT</span>
         </div>
-      </div>
-      <div class="card-image">
-        <img src="./assets/images/contents/cover-news-1.png" alt="News cover">
-      </div>
-      <div class="card-button is-purchase">
-        <a class="button is-xs is-orange-transparent is-border-radius-lg" href="#">
-          <span class="button-body">
-            <span class="button-text">สนใจสั่งซื้อสินค้า</span>
-          </span>
-        </a>
       </div>
     </div>
-
-    <!-- Video -->
-    <div class="card-news">
-      <div class="postbar">
-        <div class="postbar-info">
-          <div class="postbar-segment is-logo">
-            <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
+    <div class="container-content-inner">
+      <div class="score">
+        <div class="score-body">
+          <div class="score-number">
+            <span class="text-first-ms-bold is-orange-1">9999</span>
           </div>
-          <div class="postbar-segment is-meta">
-            <img class="logo-outline" src="./assets/images/logos/logo-text-outline.svg" alt="Logo">
-            <div class="datetime">โพสต์ 1 พศจิกายน 2561 เวลา 15.00 น.</div>
-          </div>
-        </div>
-        <div class="postbar-action">
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank">
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-download.svg" alt="Icon">
-                <span class="button-text">Download</span>
-              </span>
-            </a>
-          </div>
-          <div class="postbar-segment is-button">
-            <a class="button-circle" href="#" target="_blank"><!-- add class 'is-active' to display keeped status -->
-              <span class="button-body">
-                <img class="button-icon" src="./assets/images/icons/icon-keep.svg" alt="Icon">
-                <span class="button-text">Keep</span>
-              </span>
-            </a>
+          <div class="score-unit">
+            <span class="text-first-xl-bold is-orange-1">คะแนน</span>
           </div>
         </div>
       </div>
-      <div class="card-image">
-        <img src="./assets/images/contents/cover-news-2.jpg" alt="News cover">
-        <div class="card-button is-video">
-          <a class="button is-flexible is-transparent" href="#">
-            <span class="button-body">
-              <img class="button-icon" src="./assets/images/icons/icon-play-video.svg" alt="Icon">
-            </span>
-          </a>
-        </div>
+      <div class="panel-list">
+        <ul class="list">
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text-first-lg-bold is-orange-1">ตัวแทน</span>
+            </div>
+            <div class="list-value">
+              <span class="text-first-lg-bold is-gray-4">Yong IT</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text-first-lg-bold is-orange-1">ยี่ห้อ</span>
+            </div>
+            <div class="list-value">
+              <span class="text-first-lg-bold is-gray-4">Sapphire</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text-first-lg-bold is-orange-1">ชนิด</span>
+            </div>
+            <div class="list-value">
+              <span class="text-first-lg-bold is-gray-4">VGA Card</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text-first-lg-bold is-orange-1">รหัส</span>
+            </div>
+            <div class="list-value">
+              <span class="text-first-lg-bold is-gray-4">VGA-SPP-NRX5704LT</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text-first-lg-bold is-orange-1">ซีเรียล</span>
+            </div>
+            <div class="list-value">
+              <span class="text-first-lg-bold is-gray-4">abcdefg-250014268001</span>
+            </div>
+          </li>
+          <li class="list-item is-flex-spacebetween">
+            <div class="list-label">
+              <span class="text-first-lg-bold is-orange-1">วันที่</span>
+            </div>
+            <div class="list-value">
+              <span class="text-first-lg-bold is-gray-4">3 พฤษภาคม 2561 15.34</span>
+            </div>
+          </li>
+        </ul>
       </div>
+      <a class="button is-fluid" href="#">
+        <span class="button-body">
+          <span class="button-text">บันทึกข้อมูล</span>
+        </span>
+      </a>
     </div>
   </div>
 
   <!-- Navigation bar -->
   <div class="navigationbar">
-      <a class="navigation-button is-active" href="#"><!-- add class 'is-active' to display selected status -->
+      <a class="navigation-button" href="#"><!-- add class 'is-active' to display selected status -->
         <img class="navigation-icon" src="./assets/images/icons/icon-news.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">ข่าวสาร</span>
       </a>
-      <a class="navigation-button" href="#">
+      <a class="navigation-button is-active" href="#">
         <img class="navigation-icon" src="./assets/images/icons/icon-scan.svg" alt="Icon">
         <span class="text-first-xs-bold is-white">แสกนสินค้า</span>
       </a>
