--- a/scan-1.html
+++ b/scan-1.html
@@ -86,6 +86,7 @@
   <div class="topbar is-title">
     <img class="logo" src="./assets/images/logos/logo-small.png" alt="Logo">
     <span class="title text-first-lg-bold is-orange-1">แสกนสินค้า</span>
+    <!-- <span class="title text-first-lg-bold is-orange-1">ตรวจสอบระยะประกันสินค้า</span> -->
   </div>
 
   <div class="container-content is-except-topbar-title is-flex-center-all">
